--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
 paleta de colores: #023047 , #219ebc48, #8ecae6, #ffb703, #fb8500
 para letras: #e2e2b7
 **/
+* {
+    color: #c4c3b4;
+}
+
 body {
     box-sizing: border-box;
     margin: 0;
