--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ paleta de colores: #023047 , #219ebc48, #8ecae6, #ffb703, #fb8500
 para letras: #e2e2b7
 **/
 * {
-    color: #c4c3b4;
+    color: #e4e3d5;
     font-family: "Nunito";
 }
 
