--- a/css/styles.css
+++ b/css/styles.css
@@ -1,437 +1,424 @@
+/**Colores**/
+/**Borders subtitle**/
 /**Atributos generales
 paleta de colores: #023047 , #219ebc48, #8ecae6, #ffb703, #fb8500
 para letras: #e2e2b7
 **/
-* { color: #e0e0d8;
-    font-family: "Nunito";
+* {
+  color: #e0e0d8;
+  font-family: "Nunito";
 }
 
 body {
-    box-sizing: border-box;
-    margin: 0;
-    background-image: url(../imagenes/imagenfondo/Fondo.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-    width: 100vw;
-
+  box-sizing: border-box;
+  margin: 0;
+  background-image: url(../imagenes/imagenfondo/Fondo.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  width: 100vw;
+  height: 100vh;
 }
+
 /**Atributos para el nav**/
 .header {
-    box-shadow: #e2e2b75d 0px 0px 20px;
-    position: fixed; top: 0;
-    width: 100vw;
-    background-color: #111111cb;
-
+  box-shadow: rgba(226, 226, 183, 0.4588235294) 0px 0px 20px;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  background-color: rgba(17, 17, 17, 0.7960784314);
 }
 
 .navbar {
-    display: flex;
-    justify-content: right;
+  display: flex;
+  justify-content: right;
 }
 
 .logo {
-    margin: 0;
-    font-size: 2rem;
-    font-weight: bold;
-    position: absolute;
-    left: 30px;
-    top: 5px
+  margin: 0;
+  font-size: 2rem;
+  font-weight: bold;
+  position: absolute;
+  left: 30px;
+  top: 5px;
 }
+
 /**media para la barra de navegacion**/
 @media (max-width: 768px) {
-    .logo {
-        display: none;
-    }
+  .logo {
+    display: none;
+  }
 }
-
 .navbar_list {
-    list-style: none;
-    display: flex;
-    padding-left: 0;
-    align-items: center;
-    margin-right: 15px;
+  list-style: none;
+  display: flex;
+  padding-left: 0;
+  align-items: center;
+  margin-right: 15px;
 }
 
 @media (max-width: 768px) {
-    .navbar_list {
-        text-align: center;
-        margin-right: 0;
-    }
+  .navbar_list {
+    text-align: center;
+    margin-right: 0;
+  }
 }
-
 .navlist_item {
-    padding: 1px;
-    margin-right: 15px;
-}
-
-
-a {
-    text-decoration: none;
-    color: #e2e2b7;
-}
-
-a:hover {
-    color: #ffb703;
+  padding: 1px;
+  margin-right: 15px;
 }
 
 .golden_letter {
-    color: #ffb703;
+  color: #ffb703;
 }
 
 /**Atributos para el footer**/
 footer {
-    text-align: center;
-    border-top: solid 1px #e2e2b7;
-    margin-top: 10%;
+  width: 100vw;
+  text-align: center;
+  border-top: solid 1px #e0e0d8;
+  margin-top: 10%;
 }
 
 /**Atributos para index**/
 .content_index {
-    margin-top: 8%;
-    width: 100vw;
+  margin-top: 8%;
+  width: 100vw;
 }
 
 .title_principal {
-    margin: 0%;
-    margin-top: 10%;
-    font-size: 4rem;
+  margin: 0%;
+  margin-top: 10%;
+  font-size: 4rem;
 }
 
 .title_noindex {
-    margin-left: 10%;
-    margin-top: 8%;
-    border-bottom: solid 1px #e2e2b7;
-    width: max-content;
-    text-wrap: nowrap;
+  margin-left: 10%;
+  margin-top: 8%;
+  border-bottom: solid 1px #e0e0d8;
+  width: max-content;
+  text-wrap: nowrap;
 }
 
 @media (max-width: 768px) {
-    .title_principal {
-        margin-top: 20%;
-    }
+  .title_principal {
+    margin-top: 20%;
+  }
 }
-
 .name_index {
-    text-align: center;
+  text-align: center;
+  display: block;
 }
 
 .subtitle {
-    font-size: 2rem;
-    margin-top: 0%;
-    border-bottom: solid 1px #e2e2b7;
+  font-size: 2rem;
+  margin-top: 0%;
+  border-bottom: solid 1px #e0e0d8;
 }
 
 .subtitle_index {
-    border: none;
-    text-align: center;
-    margin-left: 0%;
+  border: none;
+  text-align: center;
+  margin-left: 0%;
 }
 
 .sub_subtitle {
-    font-size: 1.5rem;
-    margin-bottom: 0;
+  font-size: 1.5rem;
+  margin-bottom: 0;
 }
 
 .first_content--index {
-    display: flex;
-    margin: 0%;
-    justify-content: center;
-    margin-top: 100px;
+  display: flex;
+  margin: 0%;
+  justify-content: center;
+  margin-top: 100px;
 }
 
 @media (max-width: 767px) {
-    .first_content--index {
-        flex-wrap: wrap;
-    }
+  .first_content--index {
+    flex-wrap: wrap;
+  }
 }
-
 .content_p--index {
-    width: 300px;
-    height: 300px;
-    padding-top: 4%;
+  width: 300px;
+  height: 300px;
+  padding-top: 4%;
 }
 
 .paragraph_index {
-    text-align: center;
-    margin: 10px;
+  text-align: center;
+  margin: 10px;
 }
+
 .content_img--index {
-    width: 300px;
-    height: 300px;
-    margin-right: 20px;
+  width: 300px;
+  height: 300px;
+  margin-right: 20px;
 }
 
 .photo_index {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
 }
 
 .section_contact--index {
-    border-top: solid 1px #e2e2b7;
+  border-top: solid 1px #e0e0d8;
 }
 
 .contact_index {
-    display: flex;
-    list-style: none;
-    padding-left: 0%;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  list-style: none;
+  padding-left: 0%;
+  justify-content: center;
+  align-items: center;
 }
 
 .item_contact--index {
-    width: 40px;
-    height: 40px;
-    text-align: center;
+  width: 40px;
+  height: 40px;
+  text-align: center;
 }
 
 .icon_social {
-    margin-top: 8px;
-    width: 25px;
+  margin-top: 8px;
+  width: 25px;
 }
-
 .icon_social:hover {
-    width: 32px;
-    filter: drop-shadow(#e2e2b7ad 0px 0px 20px);
+  width: 32px;
+  filter: drop-shadow(rgba(226, 226, 183, 0.6784313725) 0px 0px 20px);
 }
 
 /**Comienza portafolio**/
 .section_portfolio {
-    margin-top: 5%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 350px));
-    grid-template-rows: 600px;
-    grid-auto-flow: row;
-    justify-content: space-around;
-    text-align: center;
+  margin-top: 5%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 350px));
+  grid-template-rows: 600px;
+  grid-auto-flow: row;
+  justify-content: space-evenly;
+  text-align: center;
 }
 
 article .subtitle {
-    border-bottom: none;
+  border-bottom: none;
 }
 
 .image_portfolio {
-    border-radius: 50%;
-    width: 300px;
-    height: 300px;
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
 }
 
 /**Atributos para sobre mi**/
 .subtitle_aboutme {
-    border: none;
+  border: none;
 }
 
 .description_expwork {
-    font-size: 1rem;
-    margin-top: 0;
+  font-size: 1rem;
+  margin-top: 0;
 }
 
 .presentation_aboutme {
-    display: flex;
-    margin-top: 10%;
-    justify-content: center;
+  display: flex;
+  margin-top: 10%;
+  justify-content: center;
 }
 
 @media (max-width: 768px) {
-    .presentation_aboutme {
-        flex-wrap: wrap;
-    }
+  .presentation_aboutme {
+    flex-wrap: wrap;
+  }
 }
-
 .div_presentation {
-    width: 400px;
+  width: 400px;
 }
 
 @media (max-width: 768px) {
-    .div_presentation {
-        text-align: center;
-    }
+  .div_presentation {
+    text-align: center;
+  }
 }
-
-@media (max-width:768px) {
-    .div_presentation {
-        width: 100vw;
-    }
+@media (max-width: 768px) {
+  .div_presentation {
+    width: 100vw;
+  }
 }
 .div_experience {
-    width: 50vw;
-    align-items: center;
+  width: 50vw;
+  align-items: center;
 }
+
 .title_skills {
-    margin-left: 10%;
-    display: flex;
-    margin-bottom: 2%;
+  margin-left: 10%;
+  display: flex;
+  margin-bottom: 2%;
 }
 
 .img_skills {
-    margin-inline: 5%;
+  margin-inline: 5%;
 }
 
 .skills {
-    text-align: center;
+  text-align: center;
 }
 
 .text_presentation {
-    margin-left: 5%;
-    border-bottom: solid 1px #e2e2b7;
-    padding-bottom: 5%;
+  margin-left: 5%;
+  border-bottom: solid 1px #e0e0d8;
+  padding-bottom: 5%;
 }
 
 .photo_aboutme {
-    border-radius: 50%;
-    height: 400px;
-    width: 400px;
-}
-@media (max-width: 767px) {
-    .photo_aboutme {
-    height: 300px;
-    width: 300px;
-    }
+  border-radius: 50%;
+  height: 400px;
+  width: 400px;
 }
 
+@media (max-width: 767px) {
+  .photo_aboutme {
+    width: 300px;
+    height: 300px;
+  }
+}
 .div_title--experience {
-    width: max-content;
-    margin-left: 10%;
-    margin-top: 10%;
-    text-wrap: nowrap;
+  width: max-content;
+  margin-left: 10%;
+  margin-top: 10%;
+  text-wrap: nowrap;
 }
 
 .title_experience {
-    font-size: 1.75rem;
-    margin-top: 15%;
-    border-bottom: solid 1px #e2e2b7;
-    
+  font-size: 1.75rem;
+  margin-top: 15%;
+  border-bottom: solid 1px #e0e0d8;
 }
 
 .img_skills {
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
 }
 
 .img_expwork {
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    margin-right: 3%;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  margin-right: 3%;
 }
 
 .list_experience {
-    padding-left: 0%;
-    list-style: none;
+  padding-left: 0%;
+  list-style: none;
 }
 
 .item_experience {
-    display: flex;
-    margin: 5% 0 0 15%;
-    flex-wrap: wrap;
+  display: flex;
+  margin: 5% 0 0 15%;
+  flex-wrap: wrap;
 }
 
 /**Atributos para opiniones**/
 .name_opinion {
-    border-bottom: solid 1px #e2e2b7;
+  border-bottom: solid 1px #e0e0d8;
 }
 
 .section_opinion {
-    margin-left: 15%;
+  margin-left: 15%;
 }
 
 .article_opinion2 {
-    margin-left: 15%;
+  margin-left: 15%;
 }
 
 .article_opinion {
-    display: flex;
-    margin-top: 3%;
+  display: flex;
+  margin-top: 3%;
 }
 
 @media (max-width: 768px) {
-    .article_opinion, .section_opinion {
-        margin-left: 0;
-    }
+  .article_opinion, .section_opinion {
+    margin-left: 0;
+  }
 }
 .div_opinion {
-    margin-left: 2%;
+  margin-left: 2%;
 }
 
 .text_opinion {
-    text-align: center;
-    font-size: 1.75rem;
+  text-align: center;
+  font-size: 1.75rem;
 }
 
 .photo_opinion {
-    width: 180px;
-    height: 180px;
-    border-radius: 50%;
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
 }
-
 
 /**Atributos para contactame**/
 .contain_contact {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 @media (max-width: 768px) {
-    .contain_contact {
-        flex-direction: column;
-    }
+  .contain_contact {
+    flex-direction: column;
+  }
 }
-
 .section_form {
-   justify-content: center;
-   width: 30vw;
-   margin-left: 5%;
+  justify-content: center;
+  width: 30vw;
+  margin-left: 5%;
 }
 
 @media (max-width: 768px) {
-    .section_form {
-        width: 90vw;
-    }
+  .section_form {
+    width: 90vw;
+  }
 }
 .div_input {
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
 .input_form, .button_send {
-    box-sizing: border-box;
-    color: #e2e2b7;
-    font-size: 0.9rem;
-    font-family: "Nunito";
-    padding: 8px;
-    border-radius: 6px;
-    border: solid 1px #e2e2b7;
-    background-color: #1111118a ;
-    box-shadow: #00000085 2px 2px 5px 2px;
-    width: 100%;
-    outline: none;
+  box-sizing: border-box;
+  color: #e0e0d8;
+  font-size: 0.9rem;
+  font-family: "Nunito";
+  padding: 8px;
+  border-radius: 6px;
+  border: solid 1px #e0e0d8;
+  background-color: rgba(17, 17, 17, 0.5411764706);
+  box-shadow: rgba(0, 0, 0, 0.5215686275) 2px 2px 5px 2px;
+  width: 100%;
+  outline: none;
 }
-
 .input_form:hover, .button_send:hover {
-    box-shadow: #e2e2b75d 0px 0px 20px;
+  box-shadow: rgba(226, 226, 183, 0.3647058824) 0px 0px 20px;
 }
 
 textarea {
-    color: #e2e2b7;
-    max-height: 300px;
-    min-height: 100px;
-    resize: none;
+  color: #e0e0d8;
+  max-height: 300px;
+  min-height: 100px;
+  resize: none;
 }
 
 .text_form {
-    margin-top: 20%;
-    text-align: center;
+  margin-top: 20%;
+  text-align: center;
 }
 
 .text_contact {
-    margin-top: 40%;
-    border-bottom: solid 1px #e2e2b7;
+  margin-top: 40%;
+  border-bottom: solid 1px #e0e0d8;
 }
 
 .section_networks {
-    margin: auto;
+  margin: auto;
 }
-
 
 /*# sourceMappingURL=styles.css.map */
