--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,9 +1,5 @@
-@import "variables";
-
-@mixin sizes ($width, $height) {
-    width: $width;
-    height: $height;
-}
+@import "./partials/variables";
+@import "./partials/mixins";
 /**Atributos generales
 paleta de colores: #023047 , #219ebc48, #8ecae6, #ffb703, #fb8500
 para letras: #e2e2b7
