--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ body {
 
 .golden_letter {
   color: #ffb703;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /**Atributos para el footer**/
@@ -49,6 +50,10 @@ footer {
   text-align: center;
   border-top: solid 1px #e0e0d8;
   margin-top: 10%;
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 20px;
+  background: rgba(0, 0, 0, 0.337254902);
 }
 
 /**Atributos para index**/
@@ -167,6 +172,7 @@ footer {
   grid-auto-flow: row;
   justify-content: space-evenly;
   text-align: center;
+  align-items: center;
 }
 
 article .subtitle {
@@ -174,11 +180,31 @@ article .subtitle {
 }
 
 .image_portfolio {
-  border-radius: 50%;
   width: 300px;
   height: 300px;
+  border-radius: 50%;
 }
 
+.image_hc {
+  margin-bottom: 20%;
+}
+
+.article_portfolio {
+  border-radius: 8px;
+  box-shadow: rgba(226, 226, 183, 0.4588235294) 0px 0px 4px;
+  padding: 25px;
+  margin: 10px;
+}
+.article_portfolio:hover {
+  box-shadow: rgba(226, 226, 183, 0.4588235294) 0px 0px 20px;
+}
+
+@media (max-width: 768px) {
+  .article_portfolio {
+    box-shadow: none;
+    margin-top: 25%;
+  }
+}
 /**Atributos para sobre mi**/
 .subtitle_aboutme {
   border: none;
