correccion de footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,12 +48,20 @@ body {
 footer {
   width: 100vw;
   text-align: center;
-  border-top: solid 1px #e0e0d8;
+  box-shadow: rgba(226, 226, 183, 0.4588235294) 0px 0px 4px;
   margin-top: 10%;
   display: flex;
   justify-content: space-evenly;
-  padding-top: 20px;
+  padding-top: 10px;
   background: rgba(0, 0, 0, 0.337254902);
+}
+
+.copyright {
+  margin-bottom: 0;
+}
+
+.icon_footer {
+  width: 18px;
 }
 
 /**Atributos para index**/
