agrego meta drescription en 3 htmls

--- a/css/styles.css
+++ b/css/styles.css
@@ -422,6 +422,11 @@ textarea {
   margin-top: 10%;
 }
 
+@media (max-width: 768px) {
+  .img_marca {
+    margin-top: 15%;
+  }
+}
 /**Imports abstract**/
 /**Colores**/
 /**Borders subtitle**/
