--- a/scss/partials/styles/_style.scss
+++ b/scss/partials/styles/_style.scss
@@ -416,3 +416,9 @@ textarea {
 .div_section--networks {
     margin-top: 10%;
 }
+
+@media (max-width: 768px) {
+    .img_marca {
+        margin-top: 15%;
+    }
+}
